--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next": "15.1.6",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
+    "next-videos": "^1.4.1",
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
